--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.20.0",
+    "mongodb": "5.5",
     "next": "^15.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
