--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.21",
+    "lucide-react": "^0.544.0",
     "mongodb": "5.5",
     "next": "^15.5.3",
     "react": "^18.3.1",
